--- a/PL-1/PL.ipynb
+++ b/PL-1/PL.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "d7c145a2-7687-4da3-9c34-98f120377b48",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "id": "7332a05d-b4c8-44d1-8911-8ad414ef68bc",
    "metadata": {},
    "outputs": [
@@ -211,7 +211,7 @@
     "                prompt = f\"\"\"You are ChatBot, an educational assistant.\n",
     "                Current question: {user_query}\n",
     "                Current user: {username}\n",
-    "                Provide a helpful response, Don't use markdown test:\"\"\"\n",
+    "                Provide a helpful response, Don't use markdown text:\"\"\"\n",
     "            \n",
     "            response = self.model.generate_content(prompt)\n",
     "            time.sleep(0.5)\n",
